add finish lesson + small refactor get lesson
